--- a/for_line2/Makefile
+++ b/for_line2/Makefile
@@ -1,3 +1,19 @@
-yes
+ye    # def save(self, commit=True):
+    #     instance: UserAvatar = super().save(commit=False)
+    #     instance.u_id = get_user_model().id
+    #     instance.save()
+    #     return instances
 we will use flask not django
-YES
+YES    # def save(self, commit=True):
+    #     instance: UserAvatar = super().save(commit=False)
+    #     instance.u_id = get_user_model().id
+    #     instance.save()
+    #     return instance
+    
+    
+    
+        # def save(self, commit=True):
+    #     instance: UserAvatar = super().save(commit=False)
+    #     instance.u_id = get_user_model().id
+    #     instance.save()
+    #     return instance
