makefile and reqs rebase

--- a/for_line2/Makefile
+++ b/for_line2/Makefile
@@ -1,19 +1,4 @@
-ye    # def save(self, commit=True):
-    #     instance: UserAvatar = super().save(commit=False)
-    #     instance.u_id = get_user_model().id
-    #     instance.save()
-    #     return instances
-we will use flask not django
-YES    # def save(self, commit=True):
-    #     instance: UserAvatar = super().save(commit=False)
-    #     instance.u_id = get_user_model().id
-    #     instance.save()
-    #     return instance
-    
-    
-    
-        # def save(self, commit=True):
-    #     instance: UserAvatar = super().save(commit=False)
-    #     instance.u_id = get_user_model().id
-    #     instance.save()
-    #     return instance
+
+run:
+	python app/manage.py runserver
+
